# string-cpp-proto

./: CMakeLists.txt  README.md  main.cpp
cmake/: aarch64.clang.toolchain.cmake  setup.cmake  x86_64.clang.toolchain.cmake
string/: CMakeLists.txt  String.cpp  String.hpp  String_sjis_to_utf16be.hpp  String_utf16be_to_sjis.hpp
string/tools/: IBM.xlsx  jis0201.txt  jis0208.txt  jiswin.txt  makeconvtbl.pl
